fix align

--- a/_sass/_main-style.scss
+++ b/_sass/_main-style.scss
@@ -72,6 +72,7 @@
 		max-width: 33.3%;
 		padding-left: 10px;
 		padding-right: 10px;
+    text-align: justify;
 		@media(max-width: 460px){
 		    flex: 0 1 100%;
 			max-width: 100%;
